; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_audiohandler.c_get_drc_string.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_audiohandler.c_get_drc_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"Off\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"%.1f\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (double)* @get_drc_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_drc_string(double %0) #0 {
  %2 = alloca double, align 8
  %3 = alloca i8*, align 8
  store double %0, double* %2, align 8
  %4 = load double, double* %2, align 8
  %5 = fcmp olt double %4, 0x3FEFAE147AE147AE
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = call i32 @_(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %8 = call i8* @g_strdup(i32 %7)
  store i8* %8, i8** %3, align 8
  br label %12

9:                                                ; preds = %1
  %10 = load double, double* %2, align 8
  %11 = call i8* @g_strdup_printf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), double %10)
  store i8* %11, i8** %3, align 8
  br label %12

12:                                               ; preds = %9, %6
  %13 = load i8*, i8** %3, align 8
  ret i8* %13
}

declare dso_local i8* @g_strdup(i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i8* @g_strdup_printf(i8*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
